--- a/src/Logowanie.form
+++ b/src/Logowanie.form
@@ -16,14 +16,14 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="95d83" class="javax.swing.JLabel" binding="logowanieKlientaLabel">
+          <component id="95d83" class="javax.swing.JLabel" binding="logowanieLabel">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <font size="30" style="1"/>
               <foreground color="-16777216"/>
-              <text value="Logowanie klienta"/>
+              <text value="Logowanie"/>
             </properties>
           </component>
         </children>
@@ -69,7 +69,7 @@
           </component>
           <component id="d32e8" class="javax.swing.JLabel" binding="passwordLabel">
             <constraints>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
             </constraints>
             <properties>
               <font size="14" style="1"/>
